modified:   _posts/2022-07-02-Blog-00.md

--- a/_posts/2022-07-02-Blog-00.md
+++ b/_posts/2022-07-02-Blog-00.md
@@ -1,4 +1,9 @@
 ---
-title: "BLOG"
-date: 2022-07-02
+layout: post,
+title: This is a new article
+date: %yyyy%-%mm%-%dd% %hh%:%ii%
+category: Category
+author: User
+tags: [tag1, tag2]
+summary: Summary of the article
 ---
