modified:   _posts/2022-07-02-Blog-00.md

--- a/_posts/2022-07-02-Blog-00.md
+++ b/_posts/2022-07-02-Blog-00.md
@@ -1,6 +1,6 @@
 ---
 layout: post,
-title: This is a new article
+title: BlogPost
 date: %yyyy%-%mm%-%dd% %hh%:%ii%
 category: Category
 author: User
