--- a/_posts/2022-07-02-Blog.md
+++ b/_posts/2022-07-02-Blog.md
@@ -1,7 +1,7 @@
 ---
 layout: post,
 title: BlogPost
-date: %yyyy%-%mm%-%dd% %hh%:%ii%
+date: %yyyy%:%mm%:%dd% %hh%:%ii%
 category: Category
 author: User
 tags: [tag1, tag2]
