--- a/_posts/2022-07-02-Blog.md
+++ b/_posts/2022-07-02-Blog.md
@@ -1,9 +1,23 @@
 ---
 layout: post,
-title: BlogPost
-date: %yyyy%:%mm%:%dd% %hh%:%ii%
+title: Blog
+date: %YYYY%:%mm%:%dd% %hh%:%ii%
 category: Category
 author: User
-tags: [tag1, tag2]
-summary: Summary of the article
+tags: [Blog, Post]
+summary: Summary of the articles
 ---
+> **ϨH𐨩𐌰𐩀𐨢 ☠**
+>
+>
+> Nearly all Shane`s past their teens are either
+> college-degreed or self-educated to an equivalent level. The self-taught hacker
+> is often considered (at least by other hackers) to be better-motivated, and may
+> be more respected, than his school-shaped counterpart. Academic areas from
+> which people often gravitate into hackerdom include (besides the obvious
+> computer science and electrical engineering) physics, mathematics, linguistics,
+> and philosophy.
+>
+> ---
+>
+> entwicklerprogramm © 2k22
